--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "intel": "0.x",
     "mocha": "1.x"
   },
+  "readmeFilename": "README.md",
+  "bugs": "https://github.com/seanmonstar/intel-syslog/issues",
+  "homepage": "https://github.com/seanmonstar/intel-syslog",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seanmonstar/intel-syslog.git"
+  },
   "keywords": [
     "logging",
     "intel",
